2007-01-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/AttributeChangeNotification.java:
	New file.
	
2007-01-08  Cameron McCormack  <cam@mcc.id.au>

	PR 30355
	* java/util/Arrays.java:
	(binarySearch(byte[],byte)): Added check for zero-length array.
	(binarySearch(short[],short)): Likewise.
	(binarySearch(int[],int)): Likewise.
	(binarySearch(long[],long)): Likewise.
	(binarySearch(char[],char)): Likewise.
	(binarySearch(float[],float)): Likewise.
	(binarySearch(double[],double)): Likewise.
	(binarySearch(Object[],Object)): Likewise.
	(binarySearch(T[],T,Comparator)): Likewise.

2007-01-08  Tom Tromey  <tromey@redhat.com>

	* tools/gnu/classpath/tools/native2ascii/Native2ASCII.java (run):
	Fix length check.  PR classpath/30346.

2007-01-09  Raif S. Naffah  <classpath@naffah-raif.name>

	* tools/gnu/classpath/tools/jarsigner/SFHelper.java: Updated copyright year.
	(sfEntries): Use generics.
	(writeDSA()): Likewise.
	(startSigning()): Likewise.
	(updateEntry()): Likewise.
	* tools/gnu/classpath/tools/jarsigner/Messages.java: Updated copyright year.
	(CACHED_FORMATS): Use generics.
	(getFormattedString()): Likewise.
	* tools/gnu/classpath/tools/jarsigner/Main.java: Updated copyright year.
	(fileAndAlias): Use generics.
	(ToolParser.validate()): Likewise.
	* tools/gnu/classpath/tools/jarsigner/JarVerifier.java:
	Updated copyright year.
	Re-ordered imports and removed unused entries.
	(entryHashes): Use generics.
	(start()): Likewise.
	(verifySFEntries()): Likewise.
	Use map's entrySet() instead of its keySet().

2007-01-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/text/DateFormat.java:
	(computeInstance(int,int,Locale,boolean,boolean)):
	Throw an exception when locale info. is unavailable.
	(computeDefault(int,int,boolean,boolean)): New method.
	(getDateInstance(int,Locale)): Check providers.
	(getDateTimeInstance(int,int,Locale)): Likewise.
	(getTimeInstance(int,Locale)): Likewise.
	* java/text/DateFormatSymbols.java: