@@ -1,3 +1,9 @@
+2007-01-09  Tania Bento  <tbento@redhat.com>
+
+	* java/security/Permission.java:
+	(toString): If there are no actions, then there should not 
+	be a space between its name and ')'.
+
 2007-01-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* javax/management/AttributeChangeNotification.java:
